--- a/orion/blueprints/personas/templates/personas/detail_historial_academico.jinja2
+++ b/orion/blueprints/personas/templates/personas/detail_historial_academico.jinja2
@@ -3,14 +3,29 @@
 {% block content %}
     {{ super() }}
     <!-- Ver Datos Personales -->
-    {# {% if current_user.can_view("DATOS PERSONALES") %} #}
+    {% if current_user.can_view("HISTORIAL ACADEMICOS") %}
         {% call detail.card('Datos Académicos') %}
             {{ detail.label_value('Nivel de Estudios', persona.ESTUDIOS[persona.nivel_estudios]) }}
             {{ detail.label_value('Nivel Máximo de Estudios', persona.nivel_estudios_max.nombre, url_for('niveles_academicos.detail', nivel_academico_id=persona.nivel_estudios_max.id)) }}
             {{ detail.label_value('Carrera', persona.carrera.nombre, url_for('carreras.detail', carrera_id=persona.carrera.id)) }}
             {{ detail.label_value('Cédula Profesional', persona.cedula_profesional) }}
         {% endcall %}
-    {# {% endif %} #}
+        <!-- Listado de historial Académicos -->
+        {% call detail.card("Listado de Historial Académico") %}
+            <!-- DataTable HistorialAcademicos -->
+            <table id="historial_academicos_datatable" class="table display nowrap" style="width:100%">
+                <thead>
+                    <tr>
+                        <th>Período</th>
+                        <th>Nivel</th>
+                        <th>Escuela</th>
+                        <th>Ciudad</th>
+                    </tr>
+                </thead>
+            </table>
+            <a href="{{url_for('historial_academicos.new_with_persona_id', persona_id=persona.id)}}" class="btn btn-primary">Agregar Nivel Académico</a>
+        {% endcall %}
+    {% endif %}
 {% endblock %}
 
 {% block custom_javascript %}
@@ -21,4 +36,34 @@
         boton.classList.add('active');
         boton.href = "{{url_for('personas.detail', persona_id=persona.id)}}";
     </script>
+    {% if current_user.can_view("HISTORIAL ACADEMICOS") %}
+        <!-- DataTables -->
+        <script src="/static/js/datatables-constructor.js"></script>
+        <script src="/static/js/datatables-filtros.js"></script>
+        <script>
+            // DataTable HistorialAcademicos
+            const constructorDataTable = new ConfigDataTable( '{{ csrf_token() }}' );
+            let configDataTable = constructorDataTable.config();
+            configDataTable['ajax']['url'] = '/historial_academicos/datatable_json';
+            configDataTable['ajax']['data'] = {"estatus": "A", "persona_id": {{ persona.id }}};
+            configDataTable['columns'] = [
+                { data: 'detalle' },
+                { data: 'nivel' },
+                { data: 'escuela' },
+                { data: 'ciudad' }
+            ];
+            configDataTable['columnDefs'] = [
+                {
+                    targets: 0, // detalle
+                    data: null,
+                    render: function(data, type, row, meta) {
+                        return '<a href="' + data.url + '">' + data.periodo + '</a>';
+                    }
+                }
+            ];
+            // Filtros Historal Academicos
+            const filtrosHistorialAcademicos = new FiltrosDataTable('#historial_academicos_datatable', configDataTable);
+            filtrosHistorialAcademicos.precargar();
+        </script>
+    {% endif %}
 {% endblock %}
