--- a/orion/blueprints/personas_nombramientos/templates/personas_nombramientos/detail.jinja2
+++ b/orion/blueprints/personas_nombramientos/templates/personas_nombramientos/detail.jinja2
@@ -9,7 +9,7 @@
     {% call topbar.page_buttons('Nombramiento ' + persona_nombramiento.id | string) %}
         {{ topbar.button_previous('Persona', url_for('personas.detail_section', seccion='personas_nombramientos', persona_id=persona_nombramiento.persona_id)) }}
         {% if current_user.can_edit('PERSONAS NOMBRAMIENTOS') %}
-            {# {{ topbar.button_edit('Editar', url_for('personas_nombramientos.edit', persona_nombramiento_id=persona_nombramiento.id)) }} #}
+            {{ topbar.button_edit('Editar', url_for('personas_nombramientos.edit', persona_nombramiento_id=persona_nombramiento.id)) }}
         {% endif %}
         {% if current_user.can_admin('PERSONAS NOMBRAMIENTOS') %}
             {% if persona_nombramiento.estatus == 'A' %}{{ topbar.button_delete('Eliminar', url_for('personas_nombramientos.delete', persona_nombramiento_id=persona_nombramiento.id)) }}{% endif %}
@@ -28,13 +28,13 @@
         {{ detail.label_value('Fecha de Término', persona_nombramiento.fecha_termino) }}
         {{ detail.label_value('Archivo', persona_nombramiento.archivo) }}
         {{ detail.label_value('URL', persona_nombramiento.url, persona_nombramiento.url) }}
+    {% endcall %}
+    {% call detail.card('Vista previa del archivo') %}
         <!-- Preview del archivo -->
         {% if persona_nombramiento.type_format(persona_nombramiento.archivo) == "IMG" %}
-            {{ detail.label_value('Imágen previa') }}
             <a href="{{ persona_nombramiento.url }}"><img src="{{ persona_nombramiento.url }}" style="max-width: 500px; height: auto;"/></a>
         {% endif %}
         {% if persona_nombramiento.type_format(persona_nombramiento.archivo) == "PDF" %}
-            {{ detail.label_value('Vista previa') }}
             <object data="{{ persona_nombramiento.url }}" type="application/pdf" width="100%" height="600"></object>
         {% endif %}
     {% endcall %}
