--- a/orion/blueprints/personas/templates/personas/detail_personas_nombramientos.jinja2
+++ b/orion/blueprints/personas/templates/personas/detail_personas_nombramientos.jinja2
@@ -15,8 +15,7 @@
                 </tr>
             </thead>
         </table>
-        {# TODO: BTN para nuevo #}
-        {# <a href="{{url_for('personas_nombramientos.new_with_persona_id', persona_id=persona.id)}}" class="btn btn-primary">Agregar Licencia</a> #}
+        <a href="{{url_for('personas_nombramientos.new_with_persona_id', persona_id=persona.id)}}" class="btn btn-primary">Agregar Nombramiento</a>
     {% endcall %}
     {% endif %}
 {% endblock %}
