--- a/orion/blueprints/personas/templates/personas/detail_historial_academico.jinja2
+++ b/orion/blueprints/personas/templates/personas/detail_historial_academico.jinja2
@@ -9,6 +9,8 @@
             {{ detail.label_value('Nivel Máximo de Estudios', persona.nivel_estudios_max.nombre, url_for('niveles_academicos.detail', nivel_academico_id=persona.nivel_estudios_max.id)) }}
             {{ detail.label_value('Carrera', persona.carrera.nombre, url_for('carreras.detail', carrera_id=persona.carrera.id)) }}
             {{ detail.label_value('Cédula Profesional', persona.cedula_profesional) }}
+            <hr />
+            <a href="{{url_for('personas.edit_datos_academicos', persona_id=persona.id)}}" class="btn btn-warning">Editar</a>
         {% endcall %}
         <!-- Listado de historial Académicos -->
         {% call detail.card("Listado de Historial Académico") %}
